--- a/index.html
+++ b/index.html
@@ -399,13 +399,12 @@
             </div>
         </div>
         <div class="row">
+            <p id="JSPhrase"></p>
             <script>
                 var word1 = "cash";
                 var word2 = "money";
-                var phrase = word1 + word2;
-                "That's not very " + phrase + " of you."
-                "- Anton"
-            
+                var phrase = word1 + " " + word2;
+                document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you."            
             </script>
         </div>
         
