--- a/index.html
+++ b/index.html
@@ -398,16 +398,19 @@
                     class="align-self-start mr-3" style="width:200px;" alt="Detective Pikachu Dancing" title="Pikadab!">
             </div>
         </div>
-        <div class="row">
-            <p id="JSPhrase"></p>
-            <script>
-                var word1 = "cash";
-                var word2 = "money";
-                var phrase = word1 + " " + word2;
-                document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you."            
-            </script>
+        <div class="col">
+            <h1>JAVASCRIPT STUFF</h1>
+            <div class="row">
+                <p id="JSPhrase"></p>
+                <script>
+                    var word1 = "cash";
+                    var word2 = "money";
+                    var phrase = word1 + " " + word2;
+                    document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you."            
+                </script>
+            </div>
         </div>
-        
+
 </body>
 
 </html>
