--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
         <div class="col">
             <h1>JAVASCRIPT STUFF</h1>
             <div class="row">
+
                 <p id="JSPhrase"></p>
                 <script>
                     var word1 = "cash";
@@ -408,6 +409,14 @@
                     var phrase = word1 + " " + word2;
                     document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you."            
                 </script>
+    <div class="col">
+                <p id="JSArray"></p>
+                    <script>
+                    var colors = ["red", "orange", "yellow", "green", "blue", "violet"];
+                    document.getElementById("JSArray").innerHTML = colors;
+                    </script>
+                    </div>
+                </p>
             </div>
         </div>
 
