--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 var x = "X"; 
                 var o = "O"; 
                 var xAndO = {x,o,x}
-                document.getElementById("JSPhrase").innerHTML = "An X: " + xAndO[0] + " An O: " + xandO[1];          
+                document.getElementById("JSPhrase").innerHTML = xAndO;          
             </script>
         <div class="col">
             <h1>JAVASCRIPT STUFF</h1>
