--- a/index.html
+++ b/index.html
@@ -404,34 +404,37 @@
                 var word1 = "cash";
                 var word2 = "money";
                 var phrase = word1 + " " + word2;
-                document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you." 
-
-                var x = "X"; 
-                var o = "O"; 
-                var xAndO = {x,o,x}
-                document.getElementById("JSPhrase").innerHTML = xAndO;          
+                document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you."         
             </script>
-        <div class="col">
-            <h1>JAVASCRIPT STUFF</h1>
-            <div class="row">
+            <div class="col">
+                <h1>JAVASCRIPT STUFF</h1>
+                <div class="row">
 
-                <p id="JSPhrase"></p>
-                <script>
-                    var word1 = "cash";
-                    var word2 = "money";
-                    var phrase = word1 + " " + word2;
-                    document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you."            
-                </script>
-    <div class="col">
-                <p id="JSArray"></p>
+                    <p id="JSPhrase"></p>
                     <script>
-                    var colors = ["red", "orange", "yellow", "green", "blue", "violet"];
-                    document.getElementById("JSArray").innerHTML = colors;
+                        var word1 = "cash";
+                        var word2 = "money";
+                        var phrase = word1 + " " + word2;
+                        document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you."            
                     </script>
+                    <div class="col">
+                        <p id="JSArray"></p>
+                        <script>
+                            var colors = ["red", "orange", "yellow", "green", "blue", "violet"];
+                            document.getElementById("JSArray").innerHTML = colors;
+                        </script>
                     </div>
-                </p>
+                    </p>
+                    <div>
+                        <script>
+                            var x = "X";
+                            var o = "O";
+                            var xAndO = { x, o, x }
+                            document.getElementById("JSPhrase").innerHTML = xAndO;  
+                        </script>
+                    </div>
+                </div>
             </div>
-        </div>
 
 </body>
 
