--- a/index.html
+++ b/index.html
@@ -398,23 +398,21 @@
                     class="align-self-start mr-3" style="width:200px;" alt="Detective Pikachu Dancing" title="Pikadab!">
             </div>
         </div>
+        <h1>JAVASCRIPT STUFF</h1>
         <div class="row">
             <p id="JSPhrase"></p>
             <script>
-                var word1 = "cash";
-                var word2 = "money";
-                var phrase = word1 + " " + word2;
-                document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you." 
+                let word1 = "cash";
+                let word2 = "money";
+                let phrase = word1 + " " + word2;
+                document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you."
 
-                var x = "X"; 
-                var o = "O"; 
-                var xAndO = {x,o,x}
+                var x = "X";
+                var o = "O";
+                var xAndO = { x, o, x }
                 document.getElementById("JSPhrase").innerHTML = "An X: " + xAndO[0] + " An O: " + xandO[1];          
             </script>
-        <div class="col">
-            <h1>JAVASCRIPT STUFF</h1>
             <div class="row">
-
                 <p id="JSPhrase"></p>
                 <script>
                     var word1 = "cash";
@@ -422,16 +420,17 @@
                     var phrase = word1 + " " + word2;
                     document.getElementById("JSPhrase").innerHTML = "That's not very " + phrase + " of you."            
                 </script>
-    <div class="col">
+            </div>
+            <div class="col">
                 <p id="JSArray"></p>
-                    <script>
+                <script>
                     var colors = ["red", "orange", "yellow", "green", "blue", "violet"];
                     document.getElementById("JSArray").innerHTML = colors;
-                    </script>
-                    </div>
-                </p>
+                </script>
             </div>
+            
         </div>
+    </div>
 
 </body>
 
