--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
                         <script>
                             var x = "X";
                             var o = "O";
-                            var xAndO = { x, o, x }
-                            document.getElementById("JSPhrase").innerHTML = xAndO;  
+                            var xAndO = [ x, o, x ];
+                            document.getElementById("JSPhrase").innerHTML = xAndO[0];  
                         </script>
                     </div>
                 </div>
