--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
                             var x = "X";
                             var o = "O";
                             var xAndO = [ x, o, x ];
+                            document.getElementById("JSPhrase").innerHTML = x;
                             document.getElementById("JSPhrase").innerHTML = xAndO[0];  
                         </script>
                     </div>
