--- a/index.html
+++ b/index.html
@@ -397,12 +397,14 @@
                         <p>
                             java stuff.
                         </p>
+                        <p id = "JSTest"></p>
                         <script>
                             var x = "X";
                             var o = "O";
                             var xAndO = [ x, o, x ];
-                            document.getElementById("JSPhrase").innerHTML = x;
-                            document.getElementById("JSPhrase").innerHTML = xAndO[0];  
+                            document.getElementById("JSTest").innerHTML = x;
+                            document.getElementById("JSTest").innerHTML = xAndO[0];  
+                            document.getElementById("JSTest").innerHTML = xAndO; 
                         </script>
                     </div>
                 </div>
