--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             <div class="media">
                 <div class="media-body">
                     <p>Realistic pikachu doing the dab. Sups cool! Lol, it looks like he's dabbing.</p>
-                    <div>
+                    <div class = "h2">
                         <p>
                             java stuff.
                         </p>
@@ -402,7 +402,7 @@
                             var x = "X";
                             var o = "O";
                             var xAndO = [ x, o, x ];
-                            document.getElementById("JSTest").innerHTML = xAndO[0];   
+                            document.getElementById("JSTest").innerHTML = xAndO[0];    
                         </script>
                     </div>
                 </div>
