--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             <div class="media">
                 <div class="media-body">
                     <p>Realistic pikachu doing the dab. Sups cool! Lol, it looks like he's dabbing.</p>
-                    <div class = "h2">
+                    <div class = "s">
                         <p>
                             java stuff.
                         </p>
