--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <h1>JAVASCRIPT STUFF</h1>
         <div class="row">
 
-            <p>A phrase added to a template sentence with JavaScript.</p>
+            <p>A phrase added to a template sentence with JavaScript: </p>
             <p id="JSPhrase"></p>
             <script>
                 let word1 = "cash";
@@ -426,7 +426,7 @@
         </div>
 
         <div class="row">
-            <p>The colors of the rainbow printed using a JS Array.</p>
+            <p>The colors of the rainbow printed using a JS Array: </p>
             <p id="JSArray"></p>
 
             <script>
@@ -437,6 +437,7 @@
 
 
         <div class="row">
+                <p>Let's count to 10 using a loop with JavaScript: </p>
             <p id="JSLoop"></p>
 
             <script>
