--- a/index.html
+++ b/index.html
@@ -393,15 +393,16 @@
             <div class="media">
                 <div class="media-body">
                     <p>Realistic pikachu doing the dab. Sups cool! Lol, it looks like he's dabbing.</p>
-                    <div class = "s">
+                    <!-- meln A bit of J.S code to test variables and an array-->
+                    <div class="s">
                         <p>
                             java stuff.
                         </p>
                         <p id="JSTest"></p>
                         <script>
-                            var x = <p class = "two">X</p>;
+                            var x = "X";
                             var o = "O";
-                            var xAndO = [ x, o, x ];
+                            var xAndO = [x, o, x];
                             document.getElementById("JSTest").innerHTML = xAndO[0];    
                         </script>
                     </div>
@@ -413,7 +414,7 @@
         <h1>JAVASCRIPT STUFF</h1>
         <div class="row">
 
-            <p>A phrase added to a template sentence with JavaScript: </p>
+            <p>A phrase added to a template sentence with JavaScript.</p>
             <p id="JSPhrase"></p>
             <script>
                 let word1 = "cash";
@@ -426,7 +427,7 @@
         </div>
 
         <div class="row">
-            <p>The colors of the rainbow printed using a JS Array: </p>
+            <p>The colors of the rainbow printed using a JS Array.</p>
             <p id="JSArray"></p>
 
             <script>
@@ -437,7 +438,6 @@
 
 
         <div class="row">
-                <p>Let's count to 10 using a loop with JavaScript: </p>
             <p id="JSLoop"></p>
 
             <script>
@@ -445,12 +445,12 @@
                 let num = 10;
                 let count = "";
                 let i;
-                for(i = 1; i <= num; i++){
+                for (i = 1; i <= num; i++) {
                     count += i + "<br>";
-                    
+
                 }
                 document.getElementById("JSLoop").innerHTML = count;
-                </script>
+            </script>
 
         </div>
 
@@ -472,6 +472,16 @@
 
 
         </div>
+    </div>
+    <h1>Clink on the 1 or 2 and see what happens</h1>
+    <div class="h2">
+
+        <p id = "JSNumbers"></p>
+        <script>
+            var one = 1;
+            document.getElementById("JSNumbers").innerHTML = one;
+            one.onclick = function () { alert("This is a one")};
+        </script>
     </div>
 
 </body>
