--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@
         <script>
             var one = 1;
             document.getElementById("JSNumbers").innerHTML = one;
-            one.onclick = function () { alert("This is a one")};
+            let number = one;
+            number.onclick = function () { alert("This is a one")};
         </script>
     </div>
 
