--- a/index.html
+++ b/index.html
@@ -476,9 +476,11 @@
     <h1>Click on the 1 or 2 and see what happens</h1>
     <div class="h2">
 
-        <p id = "JSNumbers"> 1 </p>
+        <p id = "JSOne"> 1 </p>
+        <p id = "JSTwo">2</p> 
         <script>
-            document.getElementById("JSNumbers").onclick = function () {alert("This is a one")};
+            document.getElementById("JSOne").onclick = function () {alert("This is a one")};
+            document.getElementById("JSTwo").onclick = function () {alert("This is a one")};
         </script>
     </div>
 
