--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         <p id = "JSTwo">2</p> 
         <script>
             document.getElementById("JSOne").onclick = function () {alert("This is a one")};
-            document.getElementById("JSTwo").onclick = function () {alert("This is a one")};
+            document.getElementById("JSTwo").onclick = function () {alert("This is a Two")};
         </script>
     </div>
 
