--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
         </div>
     </div>
-    <h1>Click on the 1 or 2 and see what happens</h1>
+    <h1>Click on the 1 or 2 below and see what happens</h1>
     <div class="h2">
 
         <p id = "JSOne"> 1 </p>
