--- a/index.html
+++ b/index.html
@@ -477,10 +477,12 @@
     <div class="h2">
 
         <p id = "JSOne"> 1 </p>
-        <p id = "JSTwo">2</p> 
+        <p id = "JSTwo"> 2 </p> 
+        <p id = "JSThree"> 3 </p> 
         <script>
-            document.getElementById("JSOne").onclick = function () {alert("This is a one")};
-            document.getElementById("JSTwo").onclick = function () {alert("This is a one")};
+            document.getElementById("JSOne").onclick = function () {alert("This is a one.")};
+            document.getElementById("JSTwo").onclick = function () {alert("This is a two.")};
+            document.getElementById("JSThree").onclick = function () {alert("Who told you to click on this??")};
         </script>
     </div>
 
