--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         </script>
     </div>
     <h1> A click counter.</h1>
-    <div class=h2>
+    <div class= "h2">
         <p id="JSClick">Click Here</p>
         <p id="JSDone">Done</p>
         <p id = "JSNumber"></p>
