--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             document.getElementById("JSThree").onclick = function () { alert("Who told you to click on this??") };
         </script>
     </div>
-    <h1> A click counter.</h1>
+    <h1> A click counter. Click on instructed area. Click done when finished to see results.</h1>
     <div class="h2">
         <p id="JSClick">Click Here</p>
         <p id="JSDone">Done</p>
