--- a/index.html
+++ b/index.html
@@ -494,17 +494,18 @@
         <script>
             var numOfClicks = 0;
             document.getElementById("JSClick").onclick = function () { numOfClicks = numOfClicks + 1; };
-            if (numOfClicks = 0) 
+            if (numOfClicks == 0) 
             { 
                 document.getElementById("JSDone").onclick = function () { alert("Number of clicks done: " + numOfClicks + " Come on! At least try.") };
             }
-            if(numOfClicks < 10)
+            if (numOfClicks < 10) {
+
+                document.getElementById("JSDone").onclick = function () { alert("Number of clicks done: " + numOfClicks + " Good job!")};
+                
+            } 
+            else 
             {
                 document.getElementById("JSDone").onclick = function () { alert("Number of clicks done: " + numOfClicks + " That's a lot of clicks!") };
-            }
-            else
-            {
-                document.getElementById("JSDone").onclick = function () { alert("Number of clicks done: " + numOfClicks) };
             }
         </script>
     </div>
