--- a/index.html
+++ b/index.html
@@ -496,12 +496,12 @@
             var message = "";
             document.getElementById("JSClick").onclick = function () { numOfClicks = numOfClicks + 1; };
             if (numOfClicks < 10) {
-                message = " Good job!"
+                message = " Good job!";
                 
             } 
             else 
             {
-                message = " That's a lot of clicks!"
+                message = " That's a lot of clicks!";
             }
             document.getElementById("JSDone").onclick = function () { alert("Number of clicks done: " + numOfClicks + message) };
         </script>
