--- a/index.html
+++ b/index.html
@@ -495,13 +495,13 @@
             var numOfClicks = 0;
             var message = "";
             document.getElementById("JSClick").onclick = function () { numOfClicks = numOfClicks + 1; };
-            if (numOfClicks < 10) {
-                message = " Good job!";
+            if (numOfClicks >= 10) {
+                message = " That's a lot of clicks!";
                 
             } 
             else 
             {
-                message = " That's a lot of clicks!";
+                message = " Good job!";
             }
             document.getElementById("JSDone").onclick = function () { alert("Number of clicks done: " + numOfClicks + message) };
         </script>
