--- a/index.html
+++ b/index.html
@@ -412,6 +412,9 @@
             </div>
         </div>
         <h1>JAVASCRIPT STUFF</h1>
+        
+        <!-- antn - JS code that allows for a short phrase of 2 words to be added in
+        this sentence, like a catchphrase -->
         <div class="row">
 
             <p>A phrase added to a template sentence with JavaScript.</p>
@@ -426,6 +429,7 @@
             </script>
         </div>
 
+        <!-- antn - a simple array that stores and prints out the colors of the rainbow -->
         <div class="row">
             <p>The colors of the rainbow printed using a JS Array.</p>
             <p id="JSArray"></p>
@@ -436,8 +440,9 @@
             </script>
         </div>
 
-
+        <!-- antn - a simple loop that prints out numbers starting from 1 and ending at 10 -->
         <div class="row">
+            <p>Let's count to 10 using a JavaScript loop: </p>
             <p id="JSLoop"></p>
 
             <script>
@@ -474,6 +479,7 @@
         </div>
     </div>
     <!-- meln did most of this section, antn added code involving 3-->
+    
     <h1>Click on the 1 or 2 below and see what happens</h1>
     <div class="h2">
 
