--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
         </div>
     </div>
-    <!-- meln did most of this section, antn added code involving 3-->
+    <!-- meln did most of this section, antn added code involving 3 and fixed if statement-->
     <h1>Click on the 1 or 2 below and see what happens</h1>
     <div class="h2">
 
